--- a/wwwroot/languages/pt/translation.json
+++ b/wwwroot/languages/pt/translation.json
@@ -286,12 +286,12 @@
     "panelHeading": "Informações sobre recursos"
   },
   "welcomeMessage": {
-    "title": "Vamos começar",
+    "title": "Estatísticas Agrícolas de Moçambique",
     "helpBtnText": "Vou precisar de ajuda",
     "tourBtnText": "Faça o passeio",
-    "welcomeMessage": "Interessado em descoberta e exploração de dados? <br/> Mergulhe de cabeça e comece ou verifique as seguintes opções do guia de ajuda.",
+    "welcomeMessage": "O projeto MAFRA visa desenvolver e implementar um sistema robusto para estatísticas da produção agrícola em Moçambique. O eventual utilizador previsto é o Ministério da Agricultura e Desenvolvimento Rural (MADER). Atualmente, o nosso projeto piloto de segundo ano envolve três províncias: Gaza, Manica e Zambézia. Atualmente, o trabalho de campo está a ser realizado na província de Manica, a primeira que abordamos. Originalmente, estávamos programados para começar na província de Gaza, mais a sul, mas as cheias impediram a realização do trabalho. Devido ao trabalho de campo em curso, estamos felizes por ver os dados a chegar e acompanhar o progresso. O projeto é uma colaboração entre o IFPRI (Washington, DC), UT/ITC (GIP, NRS), a Universidade Eduardo Mondlane (Maputo, Moçambique) e a Universidade Nacional de Seul (Coreia do Sul). O financiamento provém do Ministério da Agricultura, Alimentação e Assuntos Rurais da Coreia do Sul (MAFRA).",
     "exploreDataBtnText": "Explorar dados",
-    "welcomeMessageOnMobile": "Interessado em descoberta e exploração de dados?",
+    "welcomeMessageOnMobile": "O projeto MAFRA visa desenvolver e implementar um sistema robusto para estatísticas da produção agrícola em Moçambique. O eventual utilizador previsto é o Ministério da Agricultura e Desenvolvimento Rural (MADER). Atualmente, o nosso projeto piloto do segundo ano envolve três províncias: Gaza, Manica e Zambézia. Atualmente, o trabalho de campo está a ser realizado na província de Manica, a primeira que estamos a abordar. Originalmente, estávamos programados para começar na província de Gaza, mais a sul, mas as cheias impediram a realização do trabalho. Devido ao trabalho de campo em curso, estamos felizes por ver os dados a chegar e acompanhar o progresso.",
     "searchBtnText": "Procure um local",
     "dismissText": "Feche a mensagem e não me mostre novamente"
   },
