--- a/wwwroot/languages/pt/translation.json
+++ b/wwwroot/languages/pt/translation.json
@@ -1310,11 +1310,518 @@
       "bulkGeocoderInfoMessage": "O CSV contém endereços, mas {{number}} não pode ser localizado no mapa: ",
       "bulkGeocoderInfo2Message": "{{nullAddresses}} endereços estão faltando no CSV.",
       "bulkGeocoderErrorTitle": "Erro do Geocoder em massa",
+      "activeStyle": "Variável de exibição",
+      "editStyle": "Editar estilo",
       "legendNullLabel": "(Sem valor)",
       "styleDisabledLabel": "Desativar estilo",
       "zFilterEnabled": "Valores extremos ocultos (clique para mostrar)",
       "zFilterDisabled": "Valores extremos detectados (clique para ocultar)",
-      "timeDimensionEnabled": "Tempo habilitado (clique para desabilitar)"
+      "timeDimensionEnabled": "Tempo habilitado (clique para desabilitar)",
+      "regionMapping": "Mapeamento de região",
+      "regionColumn": "Coluna Região",
+      "manualRegionMapping": "Mapeamento manual de região",
+      "custom": "Personalizada"
+    },
+    "tableStyling": {
+      "hideAdvancedOptions": "Ocultar opções avançadas",
+      "showAdvancedOptions": "Mostrar opções avançadas",
+      "copyUserStratum": "Copiar estrato do usuário para a área de transferência",
+      "name": "Estilo",
+      "reset": "Redefinir para o estilo padrão",
+      "data": {
+        "name": "Data",
+        "selectableDimensions": {
+          "dataset": {
+            "name": "Conjunto de dados"
+          },
+          "tableStyle": {
+            "name": "Estilo"
+          },
+          "tableStyleType": {
+            "name": "Simbologia",
+            "options": {
+              "fill": {
+                "name": "Cor de preenchimento"
+              },
+              "pointSize": {
+                "name": "Tamanho do ponto"
+              },
+              "point": {
+                "name": "Estilo de ponto/marcador"
+              },
+              "outline": {
+                "name": "Cor do contorno"
+              },
+              "label": {
+                "name": "Estilo de etiqueta"
+              },
+              "trail": {
+                "name": "Trail style"
+              }
+            }
+          }
+        }
+      },
+      "fill": {
+        "name": "Cor de preenchimento",
+        "selectableDimensions": {
+          "tableColorColumn": {
+            "name": "Variável"
+          },
+          "dataType": {
+            "name": "Tipo de coluna (avançado)"
+          },
+          "type": {
+            "name": "Type",
+            "undefinedLabel": "Please specify",
+            "options": {
+              "noStyle": {
+                "name": "No style"
+              },
+              "sequentialContinuous": {
+                "name": "Sequential (continuous)"
+              },
+              "sequentialDiscrete": {
+                "name": "Sequential (discrete)"
+              },
+              "divergingContinuous": {
+                "name": "Divergent (continuous)"
+              },
+              "divergingDiscrete": {
+                "name": "Divergent (discrete)"
+              },
+              "qualitative": {
+                "name": "Qualitative"
+              },
+              "customQualitative": {
+                "name": "Custom (qualitative)"
+              },
+              "customDiscrete": {
+                "name": "Custom (discrete)"
+              }
+            }
+          },
+          "scheme": {
+            "name": "Scheme"
+          },
+          "numberOfBins": {
+            "name": "Number of Bins"
+          }
+        }
+      },
+      "min": {
+        "name": "Min"
+      },
+      "displayRange": {
+        "name": "Faixa de exibição",
+        "selectableDimensions": {
+          "max": {
+            "name": "Max"
+          }
+        }
+      },
+      "bins": {
+        "name": "Bins",
+        "selectableDimensions": {
+          "start": {
+            "name": "{{value1}} to {{value2}}",
+            "selectableDimensions": {
+              "color": {
+                "name": "Color"
+              },
+              "start": {
+                "name": "Start"
+              },
+              "stop": {
+                "name": "Stop"
+              }
+            }
+          }
+        }
+      },
+      "colors": {
+        "name": "Colors",
+        "selectableDimensions": {
+          "color": {
+            "name": "Color"
+          },
+          "value": {
+            "name": "Value"
+          },
+          "remove": {
+            "value": "Remove"
+          },
+          "add": {
+            "value": "Add Color"
+          }
+        }
+      },
+      "nullColor": {
+        "name": "Default color"
+      },
+      "outlierColor": {
+        "name": "Outlier color"
+      },
+      "additionalColors": {
+        "name": "Cores adicionais",
+        "selectableDimensions": {
+          "regionColor": {
+            "name": "Region color"
+          },
+          "nullColor": {
+            "name": "Default color"
+          },
+          "outlierColor": {
+            "name": "Outlier color"
+          }
+        }
+      },
+      "pointSize": {
+        "name": "Point size",
+        "selectableDimensions": {
+          "pointSizeColumn": {
+            "name": "Variable"
+          },
+          "pointSizeNull": {
+            "name": "Default size"
+          },
+          "pointSizesFactor": {
+            "name": "Size factor"
+          },
+          "pointSizeOffset": {
+            "name": "Size offset"
+          }
+        }
+      },
+      "regionMapping": {
+        "name": "Mapeamento de região"
+      },
+      "legend": {
+        "name": "Lenda",
+        "selectableDimensions": {
+          "legendTitle": {
+            "name": "Title"
+          },
+          "legendTicks": {
+            "name": "Ticks"
+          },
+          "title": {
+            "name": "Item {{index}} Title"
+          }
+        }
+      },
+      "styleOptions": {
+        "name": "Opções de estilo",
+        "selectableDimensions": {
+          "styleTitle": {
+            "name": "Title"
+          },
+          "longitudeColumn": {
+            "name": "Longitude column"
+          },
+          "latitudeColumn": {
+            "name": "Latitude column"
+          }
+        }
+      },
+      "timeOptions": {
+        "name": "Opções de horário",
+        "selectableDimensions": {
+          "tableTimeColumn": {
+            "name": "Time column"
+          },
+          "tableEndTimeColumn": {
+            "name": "End time column"
+          },
+          "tableTimeIdColumns": {
+            "name": "ID columns"
+          },
+          "tableTimeIsSampled": {
+            "name": "Is Sampled",
+            "options": {
+              "true": {
+                "name": "Yes"
+              },
+              "false": {
+                "name": "No"
+              }
+            }
+          },
+          "tableTimeDisplayDuration": {
+            "name": "Display Duration"
+          },
+          "tableTimeSpreadStartTime": {
+            "name": "Spread start time",
+            "options": {
+              "true": {
+                "name": "Yes"
+              },
+              "false": {
+                "name": "No"
+              }
+            }
+          },
+          "tableTimeSpreadFinishTime": {
+            "name": "Spread finish time",
+            "options": {
+              "true": {
+                "name": "Yes"
+              },
+              "false": {
+                "name": "No"
+              }
+            }
+          }
+        }
+      },
+      "workbenchOptions": {
+        "name": "Opções de bancada",
+        "selectableDimensions": {
+          "tableStyleEnalbed": {
+            "name": "Show style in Workbench",
+            "options": {
+              "true": {
+                "name": "Style showing"
+              },
+              "false": {
+                "name": "Style hidden"
+              }
+            }
+          },
+          "showDisableStyleOption": {
+            "name": "Show disable style option"
+          },
+          "showDisableTimeOption": {
+            "name": "Show disable time option"
+          },
+          "enableManualRegionMapping": {
+            "name": "Enable manual region mapping"
+          }
+        }
+      },
+      "variableAndColumn": {
+        "name": "Variável/coluna",
+        "selectableDimensions": {
+          "columnTitle": {
+            "name": "Title"
+          },
+          "columnUnits": {
+            "name": "Units"
+          }
+        }
+      },
+      "style": {
+        "selectableDimensions": {
+          "column": {
+            "name": "Variable"
+          },
+          "styleType": {
+            "name": "Type",
+            "undefinedLabel": "Please specify",
+            "constant": {
+              "name": "No style"
+            },
+            "bin": {
+              "name": "Discrete"
+            },
+            "enum": {
+              "name": "Qualitative"
+            }
+          },
+          "enum": {
+            "name": "Enum styles",
+            "selectableDimensions": {
+              "enum": {
+                "noValue": "No value",
+                "selectableDimensions": {
+                  "value": {
+                    "name": "Value"
+                  },
+                  "remove": {
+                    "value": "Remove"
+                  }
+                },
+                "add": {
+                  "value": "Add style for value"
+                }
+              }
+            }
+          },
+          "bin": {
+            "name": "Bin styles",
+            "selectableDimensions": {
+              "add": {
+                "value": "Add style bin"
+              },
+              "bin": {
+                "noValue": "No value",
+                "range": "{{value1}} to {{value2}}",
+                "selectableDimensions": {
+                  "start": {
+                    "name": "Start"
+                  },
+                  "stop": {
+                    "name": "Stop"
+                  },
+                  "remove": {
+                    "value": "Remove"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "null": {
+          "name": "Default"
+        }
+      },
+      "point": {
+        "name": "Marker style",
+        "selectableDimensions": {
+          "marker": {
+            "name": "Marker",
+            "tooltip": "Marker supports URL and base64 of any supported image format (eg PNG, SVG)"
+          },
+          "rotation": {
+            "name": "Rotation"
+          },
+          "height": {
+            "name": "Height"
+          },
+          "width": {
+            "name": "Width"
+          }
+        }
+      },
+      "outline": {
+        "name": "Outline style",
+        "selectableDimensions": {
+          "color": {
+            "name": "Color"
+          },
+          "width": {
+            "name": "Width"
+          }
+        }
+      },
+      "label": {
+        "name": "Label style",
+        "selectableDimensions": {
+          "column": {
+            "name": "Label column"
+          },
+          "font": {
+            "name": "Font"
+          },
+          "style": {
+            "name": "Label style",
+            "options": {
+              "fill": {
+                "name": "Fill only"
+              },
+              "outline": {
+                "name": "Outline only"
+              },
+              "fillAndOutline": {
+                "name": "Fill and outline"
+              }
+            }
+          },
+          "scale": {
+            "name": "Scale"
+          },
+          "fillColor": {
+            "name": "Fill color"
+          },
+          "outlineColor": {
+            "name": "Outline color"
+          },
+          "outlineWidth": {
+            "name": "Outline width"
+          },
+          "horizontalOrigin": {
+            "name": "Horizontal origin",
+            "options": {
+              "left": {
+                "name": "Left"
+              },
+              "center": {
+                "name": "Center"
+              },
+              "right": {
+                "name": "Right"
+              }
+            }
+          },
+          "verticalOrigin": {
+            "name": "Vertical origin",
+            "options": {
+              "top": {
+                "name": "Top"
+              },
+              "center": {
+                "name": "Center"
+              },
+              "baseline": {
+                "name": "Baseline"
+              },
+              "bottom": {
+                "name": "Bottom"
+              }
+            }
+          },
+          "offsetX": {
+            "name": "Pixel offset X"
+          },
+          "offsetY": {
+            "name": "Pixel offset Y"
+          }
+        }
+      },
+      "trail": {
+        "selectableDimensions": {
+          "leadTime": {
+            "name": "Lead time (secs)"
+          },
+          "trailTime": {
+            "name": "Trail time (secs)"
+          },
+          "width": {
+            "name": "Width"
+          },
+          "resolution": {
+            "name": "Resolution"
+          },
+          "growColor": {
+            "name": "Glow color"
+          },
+          "growPower": {
+            "name": "Glow power"
+          },
+          "taperPower": {
+            "name": "Taper power"
+          },
+          "solidColor": {
+            "name": "Solid color"
+          },
+          "trailStyleOptions": {
+            "name": "Trail style options",
+            "selectableDimensions": {
+              "material": {
+                "name": "Material type",
+                "options": {
+                  "solidColor": {
+                    "name": "Solid color"
+                  },
+                  "polylineGlow": {
+                    "name": "Polyline glow"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     },
     "terriaJSONcatalog": {
       "serviceResponseErrorTitle": "A resposta do serviço não é uma string JSON",
