Add Portuguese language label texts

--- a/wwwroot/languages/pt/translation.json
+++ b/wwwroot/languages/pt/translation.json
@@ -227,6 +227,7 @@
     "btnHide": "Esconder",
     "load": "Carregar dados locais/web",
     "closeDataPanel": "Fechar painel de dados",
+    "data": "Dados",
     "myData": "Meus Dados",
     "searchPlaceholderWhole": "Pesquisar catálogo inteiro",
     "localFile": "<0> Etapa 2: </0> Selecione o arquivo",
@@ -554,6 +555,8 @@
     "removeFromMapTitle": "Remova estes dados",
     "removeFromMap": "Remover",
     "label": "Dados",
+    "disableAll": "Desativar",
+    "enableAll": "Habilitar",
     "removeAll": "Remover",
     "collapseAll": "Recolher",
     "expandAll": "Expandir",
